# unitycatalog-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: coverage.yml
server/: Cargo.toml  README.md
server/config/: default.toml
server/src/: main.rs
server/src/config/: database_config.rs  mod.rs
server/src/errors/: mod.rs
server/src/persist/models/: config.rs  mod.rs
server/src/persist/utils/: mod.rs  sqlx_configurator.rs
