[package]
name = "unitycatalog-server"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "unitycatalog-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["serde", "serde_json", "env-filter"]}

