[package]
name = "unitycatalog-server"
description = "Unity Catalog Server"
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
publish = true
readme = "README.md"

[[bin]]
name = "unitycatalog-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["serde", "serde_json", "env-filter"]}
sqlx = { workspace = true, features = ["macros", "runtime-tokio", "any", "postgres", "mysql", "chrono", "uuid"]}
uuid = { workspace = true, features = ["v4", "serde"]}
chrono = { workspace = true, features = ["serde"]}
config = { workspace = true }
